--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -10,8 +10,7 @@ url={https://api.semanticscholar.org/CorpusID:53486791}
 
 
 @ARTICLE{Hori2021-pt,
-title     = "Low-field magnetic resonance imaging: Its history and
-              renaissance",
+title     = "Low-field magnetic resonance imaging: Its history and renaissance",
 author    = "Hori, Masaaki and Hagiwara, Akifumi and Goto, Masami and Wada,
               Akihiko and Aoki, Shigeki",
 abstract  = "ABSTRACT: Low-field magnetic resonance imaging (MRI) systems
@@ -144,115 +143,27 @@ url = {https://github.com/LUMC-LowFieldMRI/HalbachOptimisation},
 }
 
 
-@misc{PTPIEEE1588,
-author = {Jeff Geerling},
-title = {PTP and IEEE-1588 hardware timestamping},
-year = {01.01.2024},
-url = {https://www.jeffgeerling.com/blog/2022/ptp-and-ieee-1588-hardware-timestamping-on-raspberry-pi-cm4},
+@article{PTPIEEE1588,
+author = {Li, Zhi and Zhong, Zhen-lin and Zhu, Wang-chun and Qin, Bin-yi},
+year = {2013},
+month = {09},
+pages = {},
+title = {A Hardware Time Stamping Method for PTP Messages Based on Linux system},
+volume = {11},
+journal = {TELKOMNIKA Indonesian Journal of Electrical Engineering},
+doi = {10.11591/telkomnika.v11i9.3255}
 }
 
 
-@misc{MagneticReadoutProcessingPyPI,
-author = {Python Software Foundation},
-title = {MagneticReadoutProcessing - PyPi},
-year = {01.01.2024},
-url = {https://pypi.org/project/MagneticReadoutProcessing/},
-}
 
-
-@misc{MagneticReadoutProcessingReadTheDocs,
-author = {Read the Docs, Inc},
-title = {MagneticReadoutProcessing - ReadTheDocs},
-year = {01.01.2024},
-url = {https://magneticreadoutprocessing.readthedocs.io/en/latest/index.html},
-}
-
-
-@misc{PythonDocstringReference,
-author = {Python Software Foundation},
-title = {Python Enhancement Proposals - Docstring Conventions},
-year = {01.01.2024},
-url = {https://peps.python.org/pep-0257/},
-}
-
-
-@misc{SphinxDocumentation,
-author = {Sphinx developers},
-title = {Sphinx makes it easy to create intelligent and beautiful documentation.},
-year = {01.01.2024},
-url = {https://www.sphinx-doc.org/en/master/},
-}
-
-
-@misc{PyPI,
-author = {Python Software Foundation},
-title = {PyPi - The Python Package Index (PyPI) is a software directory for the Python programming language.},
-year = {01.01.2024},
-url = {https://pypi.org},
-}
-
-
-@misc{ReadTheDocs,
-author = {Read the Docs, Inc},
-title = {ReadTheDocs - Build, host, and share documentation, all with a single platform.},
-year = {01.01.2024},
-url = {https://readthedocs.com},
-}
-
-
-@misc{PyTest,
-author = {Holger Krekel and pytest-dev team},
-title = {pytest: helps you write better programs},
-year = {01.01.2024},
-url = {https://docs.pytest.org/en/7.4.x/},
-}
-
-
-@misc{OpenSCAD,
-author = {Marius Kintel},
-title = {OpenSCAD - The Programmers Solid 3D CAD Modeller},
-year = {01.01.2024},
-url = {https://openscad.org},
-}
-
-
-@misc{GithubActions,
-author = {GitHub, Inc.},
-title = {Github Actions - Automate your workflow from idea to production},
-year = {01.01.2024},
-url = {https://github.com/features/actions},
-}
-
-
-@misc{PythonGlobalSymbolTable,
-author = {Python Software Foundation},
-title = {Python Docs - globals},
-year = {01.01.2024},
-url = {https://docs.python.org/3/library/functions.html#globals},
-}
-
-
-@misc{VoltcraftGM70Rest,
-author = {Marcel Ochsendorf},
-title = {VoltcraftGM70 REST Interface},
-year = {01.01.2024},
-url = {https://github.com/RBEGamer/VoltcraftGM70Rest},
-}
-
-
-@misc{heapq,
-author = {Python Software Foundation},
-title = {Python Docs - heapq},
-year = {01.01.2024},
-url = {https://docs.python.org/3/library/heapq.html},
-}
-
-
-@misc{magna-c,
-author = {Magna-C GmbH},
-title = {Magnet - Curie-Temperature},
-year = {01.01.2024},
-url = {https://www.magna-c.com/der-magnet/einsatztemperatur},
+@article{magna-c,
+author = {Fraunhofer ISI},
+title = {Globale Verwendungsstrukturen der Magnetwerkstoffe Neodym und Dysprosium: Eine szenariobasierte Analyse der Auswirkung der Diffusion der Elektromobilitaet auf den Bedarf an Seltenen Erden},
+author    = "GLOESER-CHAHOUD, Simon and  KUEHN, André and TERCERO ESPINOZA, Luis",
+month     =  05,
+year      =  2016,
+language  = "de"
+url = {https://www.isi.fraunhofer.de/content/dam/isi/dokumente/ccn/2016/KSE-WorkingPaper_Globale-Verwendungsstrukturen.pdf},
 }
 
 
@@ -425,3 +336,106 @@ doi = {10.1039/9781782628095-00133}
   copyright = "https://creativecommons.org/licenses/by/4.0",
   language  = "en"
 }
+
+
+
+@software{Ochsendorf_Marcel_MagneticReadoutProcessing_2023,
+author = {OCHSENDORF, Marcel},
+license = {GPL-2.0},
+month = {1},
+title = {MagneticReadoutProcessing is a Python library},
+url = {https://github.com/LFB-MRI/MagneticReadoutProcessing},
+version = {1.0.0},
+year = {2023}
+}
+
+
+
+@misc{MagneticReadoutProcessingPyPI,
+author = {Python Software Foundation},
+title = {MagneticReadoutProcessing - PyPi},
+year = {01.01.2024},
+url = {https://pypi.org/project/MagneticReadoutProcessing/},
+}
+
+
+@misc{MagneticReadoutProcessingReadTheDocs,
+author = {Read the Docs, Inc},
+title = {MagneticReadoutProcessing - ReadTheDocs},
+year = {01.01.2024},
+url = {https://magneticreadoutprocessing.readthedocs.io/en/latest/index.html},
+}
+
+
+@misc{PythonDocstringReference,
+author = {Python Software Foundation},
+title = {Python Enhancement Proposals - Docstring Conventions},
+year = {01.01.2024},
+url = {https://peps.python.org/pep-0257/},
+}
+
+
+@misc{SphinxDocumentation,
+author = {Sphinx developers},
+title = {Sphinx makes it easy to create intelligent and beautiful documentation.},
+year = {01.01.2024},
+url = {https://www.sphinx-doc.org/en/master/},
+}
+
+
+@misc{PyPI,
+author = {Python Software Foundation},
+title = {PyPi - The Python Package Index (PyPI) is a software directory for the Python programming language.},
+year = {01.01.2024},
+url = {https://pypi.org},
+}
+
+
+@misc{ReadTheDocs,
+author = {Read the Docs, Inc},
+title = {ReadTheDocs - Build, host, and share documentation, all with a single platform.},
+year = {01.01.2024},
+url = {https://readthedocs.com},
+}
+
+
+@misc{PyTest,
+author = {Holger Krekel and pytest-dev team},
+title = {pytest: helps you write better programs},
+year = {01.01.2024},
+url = {https://docs.pytest.org/en/7.4.x/},
+}
+
+
+@misc{OpenSCAD,
+author = {Marius Kintel},
+title = {OpenSCAD - The Programmers Solid 3D CAD Modeller},
+year = {01.01.2024},
+url = {https://openscad.org},
+}
+
+
+@misc{GithubActions,
+author = {GitHub, Inc.},
+title = {Github Actions - Automate your workflow from idea to production},
+year = {01.01.2024},
+url = {https://github.com/features/actions},
+}
+
+
+@misc{PythonGlobalSymbolTable,
+author = {Python Software Foundation},
+title = {Python Docs - globals},
+year = {01.01.2024},
+url = {https://docs.python.org/3/library/functions.html#globals},
+}
+
+
+@misc{VoltcraftGM70Rest,
+author = {OCHSENDORF, Marcel},
+title = {VoltcraftGM70 REST Interface},
+year = {01.01.2024},
+url = {https://github.com/RBEGamer/VoltcraftGM70Rest},
+}
+
+
