--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -2853,12 +2853,11 @@ def FindSimilarValuesAlgorithm(_readings: [MRPReading.MRPReading], IP_return_cou
   return similar_values
 \end{lstlisting}
 
-The Python \emph{heapq} \cite{heapq} module, which implements a
-priority queue, is used for this purpose. The calculated distances from
-the \emph{CoG} value of the measurements to are inserted into this
-queue. Subsequently, as many elements of the queue are returned as
-defined by the \emph{IP\_return\_count} parameter. The actual sorting is
-carried out by the queue in the background.
+The calculated distances from the \emph{CoG} value of the measurements
+to are inserted into a heapq priority queue. Subsequently, as many
+elements of the queue are returned as defined by the
+\emph{IP\_return\_count} parameter. The actual sorting is carried out by
+the queue in the background.
 
 \hypertarget{alternative-filter-algorithm-implementation}{%
 \subsection{Alternative Filter Algorithm
@@ -3102,11 +3101,11 @@ obtain comparable measurement results.
 The setup is placed and pre-wired in the temperature chamber 24 hours
 before the series of measurements are carried out. The insulated housing
 of a \emph{Voron 2.4} 3D printer, which has a separately controlled
-internal heating system, is used as the temperature chamber. To verify
-the temperature, an additional thermometer \emph{VC-7055BT} is placed on
-the base plate. A \emph{10mm} thick \emph{PTFE} insulation plate is
-placed between the floor and the sensor base plate to prevent direct and
-uneven heating of the base plate by the heated floor.
+internal equipped heating system, is used as the temperature chamber. To
+verify the temperature, an additional thermometer \emph{VC-7055BT} is
+placed on the base plate. A \emph{10mm} thick \emph{PTFE} insulation
+plate is placed between the floor and the sensor base plate to prevent
+direct and uneven heating of the base plate by the heated floor.
 
 The graphic
 \ref{Sensor_evaluation_plattform_with_TLV493D_and MMC5603_sensors_placed_with_thermal_conductive_glue_on_an_aluminium_baseplate.png}
