--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -337,6 +337,22 @@ doi = {10.1039/9781782628095-00133}
   language  = "en"
 }
 
+@article{OpenSCAD,
+author = {Machado, Felipe and Malpica, Norberto and Borromeo, S.},
+year = {2019},
+month = {12},
+pages = {},
+title = {Parametric CAD modeling for open source scientific hardware: Comparing OpenSCAD and FreeCAD Python scripts},
+volume = {14},
+journal = {PLoS ONE},
+doi = {10.1371/journal.pone.0225795}
+}
+
+
+
+
+
+
 
 
 @software{Ochsendorf_Marcel_MagneticReadoutProcessing_2023,
@@ -407,12 +423,7 @@ url = {https://docs.pytest.org/en/7.4.x/},
 }
 
 
-@misc{OpenSCAD,
-author = {Marius Kintel},
-title = {OpenSCAD - The Programmers Solid 3D CAD Modeller},
-year = {01.01.2024},
-url = {https://openscad.org},
-}
+
 
 
 @misc{GithubActions,
