--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -348,105 +348,38 @@ journal = {PLoS ONE},
 doi = {10.1371/journal.pone.0225795}
 }
 
+@article{SphinxDocumentation,
+author = {GARCIA-TOBAR, Javier},
+year = {2017},
+month = {3},
+pages = {27},
+title = {Sphinx as a Tool for Documenting Technical Projects},
+abstract = {Documentation is a vital part of a technical project, yet is sometimes overlooked because of its time-consuming nature. A successful documentation system can therefore benefit relevant organizations and individuals. The focus of this paper is to summarize the main features of Sphinx: an open-source tool created to generate Python documentation formatted into standard files (HTML, PDF and ePub). Based on its results, this research recommends the use of Sphinx for the more efficient writing and managing of a project’s technical documentation.}
+}
 
 
 
 
-
-
-
-@software{Ochsendorf_Marcel_MagneticReadoutProcessing_2023,
+@software{Ochsendorf2023,
 author = {OCHSENDORF, Marcel},
 license = {GPL-2.0},
 month = {1},
 title = {MagneticReadoutProcessing is a Python library},
 url = {https://github.com/LFB-MRI/MagneticReadoutProcessing},
-version = {1.0.0},
+version = {1.5.5},
 year = {2023}
 }
 
-
-
-@misc{MagneticReadoutProcessingPyPI,
-author = {Python Software Foundation},
-title = {MagneticReadoutProcessing - PyPi},
-year = {01.01.2024},
-url = {https://pypi.org/project/MagneticReadoutProcessing/},
+@Inbook{Pajankar2017,
+author={Pajankar, Ashwin},
+title={pytest},
+year={2017},
+month={Feb},
+day={25},
+pages={87-100},
+abstract={In an earlier chapter, we explored nose, which is an advanced and better framework for Python testing. Unfortunately, nose has not been under active development for the past several years. That makes it an unsuitable candidate for a test framework when you want to choose something for a long-term project. Moreover, there are many projects that use unittest or nose or a combination of both. You definitely need a framework that has more features than unittest, and unlike nose, it should be under active development. nose2 is more of a test-runner for unittest and an almost defunct tool. You need a unit test framework that's capable of discovering and running tests written in unittest and nose. It should be advanced and must be under active development. The answer is pytest.},
+isbn={978-1-4842-2676-6},
+doi={10.1007/978-1-4842-2677-3_5},
+url={https://doi.org/10.1007/978-1-4842-2677-3_5}
 }
-
-
-@misc{MagneticReadoutProcessingReadTheDocs,
-author = {Read the Docs, Inc},
-title = {MagneticReadoutProcessing - ReadTheDocs},
-year = {01.01.2024},
-url = {https://magneticreadoutprocessing.readthedocs.io/en/latest/index.html},
-}
-
-
-@misc{PythonDocstringReference,
-author = {Python Software Foundation},
-title = {Python Enhancement Proposals - Docstring Conventions},
-year = {01.01.2024},
-url = {https://peps.python.org/pep-0257/},
-}
-
-
-@misc{SphinxDocumentation,
-author = {Sphinx developers},
-title = {Sphinx makes it easy to create intelligent and beautiful documentation.},
-year = {01.01.2024},
-url = {https://www.sphinx-doc.org/en/master/},
-}
-
-
-@misc{PyPI,
-author = {Python Software Foundation},
-title = {PyPi - The Python Package Index (PyPI) is a software directory for the Python programming language.},
-year = {01.01.2024},
-url = {https://pypi.org},
-}
-
-
-@misc{ReadTheDocs,
-author = {Read the Docs, Inc},
-title = {ReadTheDocs - Build, host, and share documentation, all with a single platform.},
-year = {01.01.2024},
-url = {https://readthedocs.com},
-}
-
-
-@misc{PyTest,
-author = {Holger Krekel and pytest-dev team},
-title = {pytest: helps you write better programs},
-year = {01.01.2024},
-url = {https://docs.pytest.org/en/7.4.x/},
-}
-
-
-
-
-
-@misc{GithubActions,
-author = {GitHub, Inc.},
-title = {Github Actions - Automate your workflow from idea to production},
-year = {01.01.2024},
-url = {https://github.com/features/actions},
-}
-
-
-@misc{PythonGlobalSymbolTable,
-author = {Python Software Foundation},
-title = {Python Docs - globals},
-year = {01.01.2024},
-url = {https://docs.python.org/3/library/functions.html#globals},
-}
-
-
-@misc{VoltcraftGM70Rest,
-author = {OCHSENDORF, Marcel},
-title = {VoltcraftGM70 REST Interface},
-year = {01.01.2024},
-url = {https://github.com/RBEGamer/VoltcraftGM70Rest},
-}
-
 
