--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -383,3 +383,20 @@ doi={10.1007/978-1-4842-2677-3_5},
 url={https://doi.org/10.1007/978-1-4842-2677-3_5}
 }
 
+
+@Book{Wimmer2019,
+author={Wimmer, Raphael
+and Schmid, Andreas
+and Bockes, Florian},
+title={On the Latency of USB-Connected Input Devices},
+series={CHI '19: Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
+year={2019},
+month={Apr},
+day={18},
+pages={1-12},
+abstract={We propose a method for accurately and precisely measuring the intrinsic latency of input devices and document measurements for 36 keyboards, mice and gamepads connected via USB. Our research shows that devices differ not only in average latency, but also in the distribution of their latencies, and that forced polling at 1000 Hz decreases latency for some but not all devices. Existing practices - measuring end-to-end latency as a proxy of input latency and reporting only mean values and standard deviations - hide these characteristic latency distributions caused by device intrinsics and polling rates. A probabilistic model of input device latency demonstrates these issues and matches our measurements. Thus, our work offers guidance for researchers, engineers, and hobbyists who want to measure the latency of input devices or select devices with low latency.},
+isbn={978-1-4503-5970-2},
+doi={10.1145/3290605.3300650},
+url={https://doi.org/10.1145/3290605.3300650}
+}
+
