--- a/documentation/thesis/thesis.tex
+++ b/documentation/thesis/thesis.tex
@@ -177,7 +177,8 @@
 
 \usepackage{pdflscape}
 
-
+%\usepackage{hyperref}
+%\usepackage[colorlinks=true, urlcolor=blue, linkcolor=red]{hyperref}
 
 
 \usepackage[acronym]{glossaries}
