--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -1,4 +1,6 @@
 @article{Halbach1980DesignOP,
+shorthand = {H80},
+shortauthor={H},
 title={Design of permanent multipole magnets with oriented rare earth cobalt material},
 author={Klaus. Halbach},
 journal={Nuclear Instruments and Methods},
@@ -10,6 +12,8 @@ url={https://api.semanticscholar.org/CorpusID:53486791}
 
 
 @ARTICLE{Hori2021-pt,
+shorthand = {HH21},
+shortauthor={HH},
 title     = "Low-field magnetic resonance imaging: Its history and renaissance",
 author    = "Hori, Masaaki and Hagiwara, Akifumi and Goto, Masami and Wada,
               Akihiko and Aoki, Shigeki",
@@ -39,6 +43,8 @@ language  = "en"
 
 
 @article{cmr.a.20165,
+shorthand = {SB10},
+shortauthor={SB},
 author = {Soltner, H. and Blümler, P.},
 title = {Dipolar Halbach magnet stacks made from identically shaped permanent magnets for magnetic resonance},
 journal = {Concepts in Magnetic Resonance Part A},
@@ -54,6 +60,8 @@ year = {2010}
 }
 
 @Article{10.3389/fphy.2021.704566,
+shorthand = {WAH21},
+shortauthor={WAH},
 author={Wenzel, Konstantin and Alhamwey, Hazem and O’Reilly, Tom and Riemann, Layla Tabea and Silemek, Berk and Winter, Lukas},   
 title={B0-Shimming Methodology for Affordable and Compact Low-Field Magnetic Resonance Imaging Magnets},      
 journal={Frontiers in Physics},
@@ -67,6 +75,8 @@ abtract={Low-field (B<sub>0</sub> < 0.2 T) magnetic resonance imaging (MRI) is 
 
 
 @article{Wickenbrock_2021,
+shorthand = {WZC21},
+shortauthor={WZC},
 title={High homogeneity permanent magnet for diamond magnetometry},
 volume={322},
 ISSN={1090-7807},
@@ -82,7 +92,9 @@ pages={106867}
 
 
 @article{HallbachMagnetDesignPaper,
-author = {Peter Bluemler, Helmut Soltner},
+shorthand = {BS22},
+shortauthor={BS},
+author = {Bluemler, Peter and Soltner, Helmut},
 year = {2023},
 month = {05},
 pages = {2522},
@@ -92,7 +104,9 @@ doi = {10.1007/s00723-023-01602-2}
 }
 
 
-@Article{         harris2020array,
+@Article{harris2020array,
+shorthand = {HMW20},
+shortauthor={HMW},
 title         = {Array programming with {NumPy}},
 author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
                 van der Walt and Ralf Gommers and Pauli Virtanen and David
@@ -117,18 +131,22 @@ url           = {https://doi.org/10.1038/s41586-020-2649-2}
 
 
 @article{ortner2020magpylib,
-  title={Magpylib: A free Python package for magnetic field computation},
-  author={Ortner, Michael and Bandeira, Lucas Gabriel Coliado},
-  journal={SoftwareX},
-  volume={11},
-  pages={100466},
-  year={2020},
-  publisher={Elsevier}
+shorthand = {OB20},
+shortauthor={OB},
+title={Magpylib: A free Python package for magnetic field computation},
+author={Ortner, Michael and Bandeira, Lucas Gabriel Coliado},
+journal={SoftwareX},
+volume={11},
+pages={100466},
+year={2020},
+publisher={Elsevier}
 }
 
 
 @misc{HalbachMRIDesigner,
-author = {Benjamin Menküc, Lukas Winter, Thomas O'Reilly},
+shorthand = {MWO24},
+shortauthor={MWO},
+author = {Menküc, Benjamin and Winter, Lukas and O'Reilly Thomas},
 title = {HalbachMRIDesigner - Create a Halbach MRI Magnet from parametric definitions},
 year = {01.01.2024},
 url = {https://github.com/menkueclab/HalbachMRIDesigner},
@@ -136,7 +154,9 @@ url = {https://github.com/menkueclab/HalbachMRIDesigner},
 
 
 @misc{HalbachOptimisation,
-author = {Thomas O'Reilly},
+shorthand = {O24},
+shortauthor={O},
+author = {O'Reilly, Thomas},
 title = {HalbachOptimisation - An implementation of a genetic algorithm to optimise the homogeneity of a Halbach array by varying the ring diameters along the length of the Halbach cylinder},
 year = {01.01.2024},
 url = {https://github.com/LUMC-LowFieldMRI/HalbachOptimisation},
@@ -144,6 +164,8 @@ url = {https://github.com/LUMC-LowFieldMRI/HalbachOptimisation},
 
 
 @article{PTPIEEE1588,
+shorthand = {LZZ13},
+shortauthor={LZZ},
 author = {Li, Zhi and Zhong, Zhen-lin and Zhu, Wang-chun and Qin, Bin-yi},
 year = {2013},
 month = {09},
@@ -157,7 +179,8 @@ doi = {10.11591/telkomnika.v11i9.3255}
 
 
 @article{magna-c,
-author = {Fraunhofer ISI},
+shorthand = {GKT16},
+shortauthor={GKT},
 title = {Globale Verwendungsstrukturen der Magnetwerkstoffe Neodym und Dysprosium: Eine szenariobasierte Analyse der Auswirkung der Diffusion der Elektromobilitaet auf den Bedarf an Seltenen Erden},
 author    = "GLOESER-CHAHOUD, Simon and  KUEHN, André and TERCERO ESPINOZA, Luis",
 month     =  05,
@@ -168,65 +191,71 @@ url = {https://www.isi.fraunhofer.de/content/dam/isi/dokumente/ccn/2016/KSE-Work
 
 
 @ARTICLE{OReilly2019-rn,
-  title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore
-               Halbach array magnet",
-  author    = "O'Reilly, T and Teeuwisse, W M and Webb, A G",
-  journal   = "J. Magn. Reson.",
-  publisher = "Elsevier BV",
-  volume    =  307,
-  number    =  106578,
-  pages     = "106578",
-  month     =  oct,
-  year      =  2019,
-  language  = "en"
+shorthand = {OTW19},
+shortauthor={OTW},
+title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore
+              Halbach array magnet",
+author    = "O'Reilly, T and Teeuwisse, W M and Webb, A G",
+journal   = "J. Magn. Reson.",
+publisher = "Elsevier BV",
+volume    =  307,
+number    =  106578,
+pages     = "106578",
+month     =  oct,
+year      =  2019,
+language  = "en"
 }
 
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
 @ARTICLE{OReilly2021-ep,
-  title     = "In vivo {3D} brain and extremity {MRI} at 50 mT using a
-               permanent magnet Halbach array",
-  author    = "O'Reilly, Thomas and Teeuwisse, Wouter M and de Gans, Danny and
-               Koolstra, Kirsten and Webb, Andrew G",
-  abstract  = "PurposeTo design a low‐cost, portable permanent magnet‐based MRI
-               system capable of obtaining in vivo MR images within a
-               reasonable scan time.MethodsA discretized Halbach permanent
-               magnet array with a clear bore diameter of 27 cm was designed
-               for operation at 50 mT. Custom‐built gradient coils, RF coil,
-               gradient amplifiers, and RF amplifier were integrated and tested
-               on both phantoms and in vivo.ResultsPhantom results showed that
-               the gradient nonlinearity in the y‐direction and z‐direction was
-               less than 5\% over a 15‐cm FOV and did not need correcting. For
-               the x‐direction, it was significantly greater, but could be
-               partially corrected in postprocessing. Three‐dimensional in vivo
-               scans of the brain of a healthy volunteer using a turbo
-               spin‐echo sequence were acquired at a spatial resolution of 4
-               $\times$ 4 $\times$ 4 mm in a time of about 2 minutes. The
-               T1‐weighted and T2‐weighted scans showed a good degree of tissue
-               contrast. In addition, in vivo scans of the knee of a healthy
-               volunteer were acquired at a spatial resolution of about 3
-               $\times$ 2 $\times$ 2 mm within 12 minutes to show the
-               applicability of the system to extremity imaging.ConclusionThis
-               work has shown that it is possible to construct a low‐field MRI
-               unit with hardware components costing less than 10 000 Euros,
-               which is able to acquire human images in vivo within a
-               reasonable data‐acquisition time. The system has a high degree
-               of portability with magnet weight of approximately 75 kg,
-               gradient and RF amplifiers each 15 kg, gradient coils 10 kg, and
-               spectrometer 5 kg.",
-  journal   = "Magn. Reson. Med.",
-  publisher = "Wiley",
-  volume    =  85,
-  number    =  1,
-  pages     = "495--505",
-  month     =  jan,
-  year      =  2021,
-  copyright = "http://creativecommons.org/licenses/by/4.0/",
-  language  = "en"
+shorthand = {OTW21},
+shortauthor={OTW},
+title     = "In vivo {3D} brain and extremity {MRI} at 50 mT using a
+              permanent magnet Halbach array",
+author    = "O'Reilly, Thomas and Teeuwisse, Wouter M and de Gans, Danny and
+              Koolstra, Kirsten and Webb, Andrew G",
+abstract  = "PurposeTo design a low‐cost, portable permanent magnet‐based MRI
+              system capable of obtaining in vivo MR images within a
+              reasonable scan time.MethodsA discretized Halbach permanent
+              magnet array with a clear bore diameter of 27 cm was designed
+              for operation at 50 mT. Custom‐built gradient coils, RF coil,
+              gradient amplifiers, and RF amplifier were integrated and tested
+              on both phantoms and in vivo.ResultsPhantom results showed that
+              the gradient nonlinearity in the y‐direction and z‐direction was
+              less than 5\% over a 15‐cm FOV and did not need correcting. For
+              the x‐direction, it was significantly greater, but could be
+              partially corrected in postprocessing. Three‐dimensional in vivo
+              scans of the brain of a healthy volunteer using a turbo
+              spin‐echo sequence were acquired at a spatial resolution of 4
+              $\times$ 4 $\times$ 4 mm in a time of about 2 minutes. The
+              T1‐weighted and T2‐weighted scans showed a good degree of tissue
+              contrast. In addition, in vivo scans of the knee of a healthy
+              volunteer were acquired at a spatial resolution of about 3
+              $\times$ 2 $\times$ 2 mm within 12 minutes to show the
+              applicability of the system to extremity imaging.ConclusionThis
+              work has shown that it is possible to construct a low‐field MRI
+              unit with hardware components costing less than 10 000 Euros,
+              which is able to acquire human images in vivo within a
+              reasonable data‐acquisition time. The system has a high degree
+              of portability with magnet weight of approximately 75 kg,
+              gradient and RF amplifiers each 15 kg, gradient coils 10 kg, and
+              spectrometer 5 kg.",
+journal   = "Magn. Reson. Med.",
+publisher = "Wiley",
+volume    =  85,
+number    =  1,
+pages     = "495--505",
+month     =  jan,
+year      =  2021,
+copyright = "http://creativecommons.org/licenses/by/4.0/",
+language  = "en"
 }
 
 
 @book{Nitz2016,
+shorthand = {NK16},
+shortauthor={NK},
 author="Nitz, Wolfgang R.",
 editor="Kramme, R{\"u}diger",
 title="Magnetresonanztomographie (MRT) -- Komponenten und Methoden",
@@ -248,48 +277,52 @@ url="https://doi.org/10.1007/978-3-662-45538-8_18-1"
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
 @ARTICLE{Arnold2023-cn,
-  title     = "Low‐field {MRI}: Clinical promise and challenges",
-  author    = "Arnold, Thomas Campbell and Freeman, Colbey W and Litt, Brian
-               and Stein, Joel M",
-  abstract  = "Modern MRI scanners have trended toward higher field strengths
-               to maximize signal and resolution while minimizing scan time.
-               However, high‐field devices remain expensive to install and
-               operate, making them scarce outside of high‐income countries and
-               major population centers. Low‐field strength scanners have drawn
-               renewed academic, industry, and philanthropic interest due to
-               advantages that could dramatically increase imaging access,
-               including lower cost and portability. Nevertheless, low‐field
-               MRI still faces inherent limitations in image quality that come
-               with decreased signal. In this article, we review advantages and
-               disadvantages of low‐field MRI scanners, describe hardware and
-               software innovations that accentuate advantages and mitigate
-               disadvantages, and consider clinical applications for a new
-               generation of low‐field devices. In our review, we explore how
-               these devices are being or could be used for high acuity brain
-               imaging, outpatient neuroimaging, MRI‐guided procedures,
-               pediatric imaging, and musculoskeletal imaging. Challenges for
-               their successful clinical translation include selecting and
-               validating appropriate use cases, integrating with standards of
-               care in high resource settings, expanding options with
-               actionable information in low resource settings, and
-               facilitating health care providers and clinical practice in new
-               ways. By embracing both the promise and challenges of low‐field
-               MRI, clinicians and researchers have an opportunity to transform
-               medical care for patients around the world.Level of
-               Evidence5Technical EfficacyStage 6",
-  journal   = "J. Magn. Reson. Imaging",
-  publisher = "Wiley",
-  volume    =  57,
-  number    =  1,
-  pages     = "25--44",
-  month     =  jan,
-  year      =  2023,
-  copyright = "http://creativecommons.org/licenses/by/4.0/",
-  language  = "en"
+shorthand = {AFL23},
+shortauthor={AFL},
+title     = "Low‐field {MRI}: Clinical promise and challenges",
+author    = "Arnold, Thomas Campbell and Freeman, Colbey W and Litt, Brian
+              and Stein, Joel M",
+abstract  = "Modern MRI scanners have trended toward higher field strengths
+              to maximize signal and resolution while minimizing scan time.
+              However, high‐field devices remain expensive to install and
+              operate, making them scarce outside of high‐income countries and
+              major population centers. Low‐field strength scanners have drawn
+              renewed academic, industry, and philanthropic interest due to
+              advantages that could dramatically increase imaging access,
+              including lower cost and portability. Nevertheless, low‐field
+              MRI still faces inherent limitations in image quality that come
+              with decreased signal. In this article, we review advantages and
+              disadvantages of low‐field MRI scanners, describe hardware and
+              software innovations that accentuate advantages and mitigate
+              disadvantages, and consider clinical applications for a new
+              generation of low‐field devices. In our review, we explore how
+              these devices are being or could be used for high acuity brain
+              imaging, outpatient neuroimaging, MRI‐guided procedures,
+              pediatric imaging, and musculoskeletal imaging. Challenges for
+              their successful clinical translation include selecting and
+              validating appropriate use cases, integrating with standards of
+              care in high resource settings, expanding options with
+              actionable information in low resource settings, and
+              facilitating health care providers and clinical practice in new
+              ways. By embracing both the promise and challenges of low‐field
+              MRI, clinicians and researchers have an opportunity to transform
+              medical care for patients around the world.Level of
+              Evidence5Technical EfficacyStage 6",
+journal   = "J. Magn. Reson. Imaging",
+publisher = "Wiley",
+volume    =  57,
+number    =  1,
+pages     = "25--44",
+month     =  jan,
+year      =  2023,
+copyright = "http://creativecommons.org/licenses/by/4.0/",
+language  = "en"
 }
 
 
-@book{inbook,
+@book{BC16,
+shorthand = {BC16},
+shortauthor={BC},
 author = {Blümler, Peter and Casanova, Federico},
 year = {2016},
 month = {01},
@@ -301,43 +334,47 @@ doi = {10.1039/9781782628095-00133}
 
 
 @ARTICLE{De_Vos2023-pb,
-  title     = "An integrated target field framework for point-of-care halbach
-               array low-field {MRI} system design",
-  author    = "de Vos, Bart and Remis, Rob F and Webb, Andrew G",
-  abstract  = "AbstractObjectiveLow-cost low-field point-of-care MRI systems
-               are used in many different applications. System design has
-               correspondingly different requirements in terms of imaging
-               field-of-view, spatial resolution and magnetic field strength.
-               In this work an iterative framework has been created to design a
-               cylindrical Halbach-based magnet along with integrated gradient
-               and RF coils that most efficiently fulfil a set of
-               user-specified imaging requirements.MethodsFor efficient
-               integration, target field methods are used for each of the main
-               hardware components. These have not been used previously in
-               magnet design, and a new mathematical model was derived
-               accordingly. These methods result in a framework which can
-               design an entire low-field MRI system within minutes using
-               standard computing hardware.ResultsTwo distinct point-of-care
-               systems are designed using the described framework, one for
-               neuroimaging and the other for extremity imaging. Input
-               parameters are taken from literature and the resulting systems
-               are discussed in detail.DiscussionThe framework allows the
-               designer to optimize the different hardware components with
-               respect to the desired imaging parameters taking into account
-               the interdependencies between these components and thus give
-               insight into the influence of the design choices.",
-  journal   = "MAGMA",
-  publisher = "Springer Science and Business Media LLC",
-  volume    =  36,
-  number    =  3,
-  pages     = "395--408",
-  month     =  may,
-  year      =  2023,
-  copyright = "https://creativecommons.org/licenses/by/4.0",
-  language  = "en"
+shorthand = {DRW23},
+shortauthor={DRW},
+title     = "An integrated target field framework for point-of-care halbach
+              array low-field {MRI} system design",
+author    = "de Vos, Bart and Remis, Rob F and Webb, Andrew G",
+abstract  = "AbstractObjectiveLow-cost low-field point-of-care MRI systems
+              are used in many different applications. System design has
+              correspondingly different requirements in terms of imaging
+              field-of-view, spatial resolution and magnetic field strength.
+              In this work an iterative framework has been created to design a
+              cylindrical Halbach-based magnet along with integrated gradient
+              and RF coils that most efficiently fulfil a set of
+              user-specified imaging requirements.MethodsFor efficient
+              integration, target field methods are used for each of the main
+              hardware components. These have not been used previously in
+              magnet design, and a new mathematical model was derived
+              accordingly. These methods result in a framework which can
+              design an entire low-field MRI system within minutes using
+              standard computing hardware.ResultsTwo distinct point-of-care
+              systems are designed using the described framework, one for
+              neuroimaging and the other for extremity imaging. Input
+              parameters are taken from literature and the resulting systems
+              are discussed in detail.DiscussionThe framework allows the
+              designer to optimize the different hardware components with
+              respect to the desired imaging parameters taking into account
+              the interdependencies between these components and thus give
+              insight into the influence of the design choices.",
+journal   = "MAGMA",
+publisher = "Springer Science and Business Media LLC",
+volume    =  36,
+number    =  3,
+pages     = "395--408",
+month     =  may,
+year      =  2023,
+copyright = "https://creativecommons.org/licenses/by/4.0",
+language  = "en"
 }
 
 @article{OpenSCAD,
+shorthand = {MMN19},
+shortauthor={MMN},
 author = {Machado, Felipe and Malpica, Norberto and Borromeo, S.},
 year = {2019},
 month = {12},
@@ -349,6 +386,8 @@ doi = {10.1371/journal.pone.0225795}
 }
 
 @article{SphinxDocumentation,
+shorthand = {G17},
+shortauthor={G},
 author = {GARCIA-TOBAR, Javier},
 year = {2017},
 month = {3},
@@ -361,6 +400,8 @@ abstract = {Documentation is a vital part of a technical project, yet is sometim
 
 
 @software{Ochsendorf2023,
+shorthand = {O23},
+shortauthor={O},
 author = {OCHSENDORF, Marcel},
 license = {GPL-2.0},
 month = {1},
@@ -371,6 +412,8 @@ year = {2023}
 }
 
 @Inbook{Pajankar2017,
+shorthand = {P17},
+shortauthor={P},
 author={Pajankar, Ashwin},
 title={pytest},
 year={2017},
@@ -385,6 +428,8 @@ url={https://doi.org/10.1007/978-1-4842-2677-3_5}
 
 
 @Book{Wimmer2019,
+shorthand = {W19},
+shortauthor={W},
 author={Wimmer, Raphael
 and Schmid, Andreas
 and Bockes, Florian},
