--- a/documentation/thesis/thesis.tex
+++ b/documentation/thesis/thesis.tex
@@ -215,9 +215,13 @@
 \newcolumntype{g}{>{\columncolor{Gray}}c}
 \renewcommand*{\arraystretch}{2} %2.0 IS  THE SPACING
 
+
+\usepackage{natbib}
+\bibliographystyle{apalike}
+
 \begin{document}
 
-
+\input{thesis_references_alias}
 
 %%MOD%%
 % Einige Anpassungen müssen nach \begin{document} stehen !!
