--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -1,9 +1,7 @@
 A large number of permanent magnets are used in the construction of
 low-field MRI equipment on the basis of permanent magnets. The magnetic
 properties of these magnets must be similar to a certain degree in order
-to achieve a homogeneous B0 field, which is necessary for many setups.
-
-Due to the complex manufacturing process of neodymium magnets, the
+to achieve a homogeneous B0 field, which is necessary for many setups. Due to the complex manufacturing process of neodymium magnets, the
 different properties, i.e.~the direction of magnetisation, can deviate
 from each other. This affects the homogeneity of the field and the image
 acquisition.
