--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -445,3 +445,42 @@ doi={10.1145/3290605.3300650},
 url={https://doi.org/10.1145/3290605.3300650}
 }
 
+@ARTICLE{Boer2022-vp,
+  shorthand = {BPA22},
+  shortauthor={BPA},
+  title     = "Improving brain {B0} shimming using an easy and accessible
+               multi-coil shim array at ultra-high field",
+  author    = "Boer, Vincent Oltman and Pedersen, Jan Ole and Arango, Nick and
+               Kuang, Irene and Stockmann, Jason and Petersen, Esben Thade",
+  abstract  = "Abstract Object Improve shimming capabilities of ultra-high
+               field systems, with addition of an accessible low-complexity B0
+               shim array for head MRI at 7 T. Materials and methods An eight
+               channel B0 shim coil array was designed as a tradeoff between
+               shimming improvement and construction complexity, to provide an
+               easy to use shim array that can be employed with the standard 7
+               T head coil. The array was interfaced using an open-source
+               eight-channel shim amplifier rack. Improvements in field
+               homogeneity for whole-brain and slice-based shimming were
+               compared to standard second-order shimming, and to more complex
+               higher order dynamic shimming and shim arrays with 32 and 48
+               channels. Results The eight-channel shim array provided 12\%
+               improvement in whole brain static shimming and provided 33\%
+               improvement when using slice-based shimming. With this, the
+               eight-channel array performed similar to third-order dynamic
+               shimming (without the need for higher order eddy current
+               compensation). More complex shim arrays with 32 and 48 channels
+               performed better, but require a dedicated RF coil. Discussion
+               The designed eight-channel shim array provides a low-complexity
+               and low-cost approach for improving B0 field shimming on an
+               ultra-high field system. In both static and dynamic shimming, it
+               provides improved B0 homogeneity over standard shimming.",
+  journal   = "MAGMA",
+  publisher = "Springer Science and Business Media LLC",
+  volume    =  35,
+  number    =  6,
+  pages     = "943--951",
+  month     =  may,
+  year      =  2022,
+  copyright = "https://creativecommons.org/licenses/by/4.0",
+  language  = "en"
+}
